2003-05-01  Ross Burton  <ross@burtonini.com>

	* devilspie.spec.in: Added a RPM spec file, based on spec files by
	Michael Raab <mraab@macbyte.info> and Lars R. Damerow
	<lars@oddment.org>

	* Makefile.am: Include the spec file in the dist.

	* configure.in: Generate the spec file. Also comment out the GConf
	code for now.

	* debian/*: Updated

2002-12-29  Christian Neumair  <chris@gnome-de.org>

	* .cvsignore: Added stamp-h1.
	* configure.in (ALL_LINGUAS): Added German (de).

2002-12-17  Ross Burton  <ross@burtonini.com>

	* configure.in: Find GConf.

2002-12-02  Ross Burton  <ross@burtonini.com>

	* configure.in: Added gettext support.

	* src/devilspie.h: Added i18n macros.

	* src/Makefile.am: Use DEVILSPIE_LOCALDIR instead of
	GNOMELOCALDIR.

	* config-parser.c, devilspie-action-debug.gob,
	devilspie-action-hide.gob,devilspie-action-layer.gob,
	devilspie-action-resize.gob, devilspie-action-savegeometry.gob,
	devilspie-action-setworkspace.gob,
	devilspie-matcher-windowname.gob, devilspie.c: Mark all sensible
	strings for i18n.

	* po/POTFILES.in: Updated.

2002-11-22  Ross Burton  <ross@burtonini.com>

	* configure.in: Cleaned up, and added the compiler checks.

2002-11-15  Ross Burton  <ross@burtonini.com>

	* src/devilspie.c: Abort the Flurb if there are no matchers. Patch
	from Patrick Aussems <zyk@bugfactory.org>.

	* src/devilspie-matcher-windowname.gob: Fix a segfault when
	passing in NULL pointers as strings. Patch from Patrick Aussems
	<zyk@bugfactory.org>.

	* .cvsignore, src/.cvsignore, po/.cvsignore: Added CVS ignore
	files, from Patrick Aussems.
	
2002-11-14  Ross Burton  <ross@burtonini.com>

	* configure.in: Add GNOME_COMPILE_WARNINGS, defaulting to "yes".

	* src/Makefile.am: Remove the definition of CFLAGS as that was the
	Wrong Thing To Do. The above change sets the warning flags now.

2002-11-12  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Try and remove the intltool-* files which are
	generated. For some reason this doesn't work...
