@@ -37,16 +37,21 @@ in the pager or task list.
 rm -rf $RPM_BUILD_ROOT
 %makeinstall
 
+%find_lang %{name}
+
 %clean
 rm -rf $RPM_BUILD_ROOT
 
-%files
+%files -f %{name}.lang
 %defattr(-,root,root)
 %doc AUTHORS COPYING ChangeLog README NEWS TODO sample-config.xml devilspie.dtd
 %{_bindir}/*
 %{_mandir}/man*/*
 
 %changelog
+* Fri May  2 2003 Frederic Crozat <fcrozat@mandrakesoft.com>
+- Package locale files
+
 * Thu May 01 2003 Ross Burton <ross@burtonini.com>
 - Initial spec file based on spec files by Michael Raab
   <mraab@macbyte.info> and Lars R. Damerow <lars@oddment.org>
