@@ -1,3 +1,7 @@
+2003-05-02  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* devilspie.spec.in: package locale files.
+
 2003-05-01  Ross Burton  <ross@burtonini.com>
 
 	* devilspie.spec.in: Added a RPM spec file, based on spec files by
